app/assets/stylesheets/api/greeting.scss
.home-page {
    // border-style: solid;
    // border-color: red;
    height: 100%;
    width: 100%;
    display: flex; 
    flex-direction: column;
    // justify-content: space-between;
}

.main-nav {
    height: 80px;
    // padding-left: 150px;
    font-family: "Nanum Pen Script";
    // color: white;
    // border: 2px solid black;
    // display: flex;
    // justify-content: space-between;
    width: 100%;
    background-color: rgb(244, 182, 66);
}

.nav-container {
    max-width: 1020px;
    height: 100%;
    // border: 1px solid red;
    margin: auto auto;
    display: flex;
    justify-content: space-between;
}


.main-nav h1{
    // padding-left: 40px;
    width: 500px;
}




.greeting-button {
    margin-top: 15px;
    margin-right: 10px;
    height: 40px;
    width: 100px;
    background: none;
    border: none;
    
    
}

.greeting-button-signup {
    height: 40px;
    width: 100px;
    background: white;
    border-radius: 6px;
    font-size: 16px;

}

.greeting-button-signup:hover {
    height: 40px;
    width: 100px;
    background: rgb(244, 182, 66);
    border-radius: 6px;
    border: 2px solid #FEFEFE;
    font-size: 16px;

}

.sign-up-button {
    text-decoration-line: none;
    color: black;
    font-family: "Nanum Pen Script";
    font-size: 15px;
    font-weight: 900;
    color: rgb(244, 182, 66);
}

.login-signup {
    margin: auto auto;
}


.header-group {
    display: flex;
    justify-content: space-between;
    // border-style: solid;
    // border-color: white;
    height: 100%;
    width: 30%;
}

.header-name {
    margin: 4px 0 4px 0;
    font-size: 40px;
    
}

.header-button {
    margin-right: 40px;
    height: 30px;
    width: 100px;
    margin-top: 20px;
    // border: 1px solid black;
}

.header-button.nav {
    text-decoration-line: none;
    color: white;
    font-weight: bold;
    font-size: 18px;
}

.header-button:hover {
    background-color: rgb(244, 182, 66);
    color: white;
    // border: 1px solid white;
    font-size: 20px;
}

.header-button.logout:hover {
    background-color: rgb(244, 182, 66);
    color: white;
    border: 1px solid white;
    font-size: 14px;
}

// .logout-button {
//     background-color: rgb(244, 182, 66);
//     color: white;
//     width: 100px;
//     height: 30px;
//     color: black;

// }

.sign-up-button:hover {
    // background-color: white;
    color: white;
    font-size: 15px;
    // border: 1px solid white;
}

.logo{
    text-decoration-line: none;
    color: white;
    
}

.logo h1 {
    font-family: "Nanum Pen Script";
}

